# SANAD

./: .dockerignore  .env.example  .gitignore  Dockerfile  FANAR_INSIGHTS.md  LICENSE  PRD.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py
agents/common/: __init__.py  confidence_scorer.py  evidence.py  evidence_enrichment.py  fanar_client.py  honesty_disclaimers.py  opinion_validation.py  source_classifier.py  state.py  trace_timing.py
agents/financial_context_agent/: README.md  agent.py  market_data.py  models.py  prompt.md  tools.py
agents/intent_agent/: README.md  agent.py  models.py  prompt.md  tools.py
agents/knowledge_agent/: README.md  agent.py  models.py  prompt.md  tools.py
agents/reasoning_agent/: README.md  agent.py  models.py  prompt.md  tools.py
agents/response_builder/: README.md  agent.py  models.py  prompt.md  tools.py
alembic/: env.py
archive/: README.md
backend/: README.md
backend/app/: README.md  (+3 more)
config/: __init__.py  fanar_api_keys.py
docs/: AGENTS.md  AI_PIPELINE.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  EVALUATION.md  FANAR_INTEGRATION.md  FOLDER_STRUCTURE.md  README.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
rag/: __init__.py
scripts/: celery-entrypoint.sh  deploy.ps1  deploy.sh  docker-entrypoint.sh  docker-set-database-url.sh  run_backend.ps1  run_tests.ps1  run_tests.sh  start-sanad.ps1  stop-sanad.ps1  sync_agents.ps1  verify-sanad.ps1  verify_migrations.py
tests/: README.md  conftest.py
(+442 files in other folders)
